src/styles/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */

/* @link https://utopia.fyi/clamp/calculator?a=320,1240,16—48|16—24|13—18 */

 
:root {
	--accent: #2337ff;
	--accent-dark: #000d8a;
	--black: 15, 18, 25;
	--gray: 96, 115, 159;
	--gray-light: 229, 233, 240;
	--gray-dark: 34, 41, 57;
	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
		0 16px 32px rgba(var(--gray), 33%);
	--fluid-13-18: clamp(0.8125rem, 0.7038rem + 0.5435vw, 1.125rem);
	--fluid-16-48: clamp(1rem, 0.3043rem + 3.4783vw, 3rem);
	--fluid-16-24: clamp(1rem, 0.8261rem + 0.8696vw, 1.5rem);
}
@font-face {
	font-family: 'Atkinson';
	src: url('/fonts/atkinson-regular.woff') format('woff');
	font-weight: 400;
	font-style: normal;
	font-display: swap;
}
@font-face {
	font-family: 'Atkinson';
	src: url('/fonts/atkinson-bold.woff') format('woff');
	font-weight: 700;
	font-style: normal;
	font-display: swap;
}
body {
	font-family: 'Atkinson', sans-serif;
	margin: 0;
	padding: 0;
	text-align: left;
	background: linear-gradient(var(--gray-gradient)) no-repeat;
	background-size: 100% 600px;
	word-wrap: break-word;
	overflow-wrap: break-word;
	color: rgb(var(--gray-dark));
	font-size: 20px;
	line-height: 1.7;
}
main {
	width: 720px;
	max-width: calc(100% - 2rem);
	margin: auto;
	padding: 3rem 1rem;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 0 0 0.5rem 0;
	color: rgb(var(--black));
	font-size: var(--fluid-16-48);
	line-height: 1.2;
}

strong,
b {
	font-weight: 700;
}
a {
	color: var(--accent);
}
a:hover {
	color: var(--accent);
}
p {
	font-size:var(--fluid-16-24);
	margin-bottom: 1rem;
}

.prose p {
	font-size:var(--fluid-16-24);
	margin-bottom:2rem;
}

.prose ul {
	font-size:var(--fluid-16-24);
}

textarea {
	width: 100%;
	font-size: 1rem;
}
input {
	font-size: 1rem;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
	border-radius: 8px;
}
code {
	padding: 2px 5px;
	background-color: rgb(var(--gray-light));
	border-radius: 2px;
}

pre {
	padding: 1.5rem;
	border-radius: 8px;
}
pre > code {
	all: unset;
}
blockquote {
	border-left: 4px solid var(--accent);
	padding: 0 0 0 20px;
	margin: 0;
	font-size: var(--fluid-13-18);
}
hr {
	border: none;
	border-top: 1px solid rgb(var(--gray-light));
}
@media (max-width: 720px) {
	
	main {
		padding: 1rem;
	}
}

.sr-only {
	border: 0;
	padding: 0;
	margin: 0;
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
	clip: rect(1px 1px 1px 1px);
	/* maybe deprecated but we need to support legacy browsers */
	clip: rect(1px, 1px, 1px, 1px);
	/* modern browsers, clip-path works inwards from each corner */
	clip-path: inset(50%);
	/* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
	white-space: nowrap;
}
@media (prefers-reduced-motion: reduce) {
	* {
		animation: none !important;
	}
}
@media (prefers-color-scheme: dark) {
	body {
		background: #1b1b1b;
	}
	
	main p,
	main h1,
	article p,
	article h1,
	article h2,
	article h3,
	article h4,
	article h5,
	article h6,
	article ul {
		color: #fff;
	}

	main a {
		color:#fff;
	}

	main a:hover {
		background-color: #777;
		color:inherit;
	}
	
}

